Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7579

(osd_handler.c:2683:osd_object_destroy()) ASSERTION( osd_inode_unlinked(inode) || inode->i_nlink == 1 || inode->i_nlink == 2 ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      # export MDSCOUNT=4
      # llmount.sh
      ...
      # cd /mnt/lustre
      # mkdir d0
      # exec 7<d0
      # cd d0
      # rmdir ../d0
      # lfs mkdir -i1 d1
      # exec 7>&-
      
      [  130.331201] LustreError: 4033:0:(osd_handler.c:2683:osd_object_destroy()) ASSERTION( osd_inode_unlinked(inode) || inode->i_nlink == 1 || inode->i_nlink == 2 ) failed:
      [  130.335818] LustreError: 4033:0:(osd_handler.c:2683:osd_object_destroy()) LBUG
      [  130.338084] Pid: 4033, comm: mdt_rdpg00_001
      [  130.339427]
      [  130.339429] Call Trace:
      [  130.340776]  [<ffffffffa09338b5>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      [  130.342927]  [<ffffffffa0933eb7>] lbug_with_loc+0x47/0xb0 [libcfs]
      [  130.344861]  [<ffffffffa12aa9b1>] osd_object_destroy+0x5a1/0x5b0 [osd_ldiskfs]
      [  130.346272]  [<ffffffffa144b49d>] lod_sub_object_destroy+0x1fd/0x440 [lod]
      [  130.347589]  [<ffffffffa1440080>] lod_object_destroy+0x130/0x770 [lod]
      [  130.348877]  [<ffffffffa093f751>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
      [  130.350151]  [<ffffffffa1336ca8>] mdd_close+0xa48/0xbf0 [mdd]
      [  130.351286]  [<ffffffffa139e1c9>] mdt_mfd_close+0x359/0x1980 [mdt]
      [  130.352523]  [<ffffffffa0aa4e3d>] ? class_handle_unhash_nolock+0x2d/0x150 [obdclass]
      [  130.354034]  [<ffffffffa139fa04>] mdt_close_internal+0x214/0x4f0 [mdt]
      [  130.355298]  [<ffffffffa139ff9a>] mdt_close+0x2ba/0x900 [mdt]
      [  130.356495]  [<ffffffffa0d538f7>] tgt_request_handle+0x907/0x14a0 [ptlrpc]
      [  130.357874]  [<ffffffffa0cfdd7a>] ptlrpc_main+0xdaa/0x18b0 [ptlrpc]
      [  130.359089]  [<ffffffff8105e59d>] ? finish_task_switch+0x7d/0x110
      [  130.360256]  [<ffffffff8105e568>] ? finish_task_switch+0x48/0x110
      [  130.361445]  [<ffffffff81553065>] ? thread_return+0x4e/0x7e9
      [  130.362538]  [<ffffffff810b6b6d>] ? lock_release_holdtime+0x3d/0x190
      [  130.363791]  [<ffffffffa0cfcfd0>] ? ptlrpc_main+0x0/0x18b0 [ptlrpc]
      [  130.365028]  [<ffffffff8109e856>] kthread+0x96/0xa0
      [  130.365935]  [<ffffffff8100c30a>] child_rip+0xa/0x20
      [  130.366896]  [<ffffffff8100bb10>] ? restore_args+0x0/0x30
      [  130.367938]  [<ffffffff8109e7c0>] ? kthread+0x0/0xa0
      [  130.368911]  [<ffffffff8100c300>] ? child_rip+0x0/0x20
      [  130.369926]
      

        1. dmesg.txt
          512 kB
        2. lustre.log
          980 kB

            bzzz Alex Zhuravlev
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: