lustre/osp/osp_object.c
@@ -1033,7 +1033,6 @@ unlock:
 		GOTO(out, rc = -ERANGE);
 
 	memcpy(buf->lb_buf, rbuf->lb_buf, rbuf->lb_len);
-	rc = rbuf->lb_len;
 	if (obj->opo_ooa == NULL || osp->opd_connect_mdt)
 		GOTO(out, rc);
 
